
*   BrianMonitorResult: Mean and variance values of State and MultiState Monitors are only
    extracted if they were recorded (which for newer BRIAN versions is only the case if you
    do NOT record traces)

*   Log Level can be passed to environment

*   BUG FIX: Scalars are no longer autoconverted by the storage service to zero-length numpy arrays

*   Names of loggers have been shortened

pypet 0.1b.3

*   BUG FIX: Now `f_run` and `f_continue_run` of an environment return the results
    produced by `runfunc`

*   You can enforce a type convert for exploration

*   Added lazy_debug option for the environment

*   If you don't specify a filename, the environment defaults to a file with the name of
    the trajectory

*   New multiprocessing mode (`use_pool=False` for environment) to spawn individual processes
    for each run. Useful if data cannot be pickled.

*   New Brian framework with NetworkManager, NetworkComponent, NetworkAnalyser,
    NetworkRunner and DurationParameter

*   Components, Analysers and the network runner of the manager are now publicly available

*   Every component now provides the function `set_logger` to enable logging and instantiate a
    logger for `self.logger`

*   Now Pypet allows compression of HDF5 files, these can yield a massive reduction in
    memory space.

pypet 0.1b.2

*   DefaultReplacementError is now called PresettingError

*   Now the runtime of single runs is measured and stored.

*   __getitem__ of the trajectory always returns the instance and fast access is not applied

*   PickleResult and PickleParameter support the choice of protocol

*   Explored Sparse matrices are stored under a slightly different name to disk.

*   BUG FIX: BFS works properly

*   BUG FIX: f_iter_runs is now affected if f_as_run is chosen

*   Annotations support __iter__

*   Annotations support __getitem__

*   BrianMonitorResult, the property and columne 'times' for the Spike and StateSpikeMonitor
    has been renamed 'spiketimes'.
